@@ -1,7 +1,9 @@
 ARG IMAGE_HOST
 FROM java:8
-
+ARG workdir=/var/app
+VOLUME ${workdir}
 ARG JAR_FILE
-ADD target/${JAR_FILE} /var/app/pmapi.jar
-WORKDIR /var/app/
-ENTRYPOINT exec java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap $JAVA_OPTS $SKYWALKING_OPTS  -jar pmapi.jar
+ADD target/${JAR_FILE} ${workdir}/pmapi.jar
+WORKDIR ${workdir}
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "pmapi.jar"]
